lib/src/ffi/y_dart_bindings_generated.dart


  /// Inserts a new entry (specified as `key`-`value` pair) into a current `map`. If entry under such
  /// given `key` already existed, its corresponding value will be replaced.
  ///
  /// A `key` must be a null-terminated UTF-8 encoded string, which contents will be copied into
  /// a `map` (therefore it must be freed by the function caller).
  ///
  /// A `value` content is being copied into a `map`, therefore any of its content must be freed by
  /// the function caller.
  void ymap_insert(
    ffi.Pointer<Branch> map,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<YInput> value,
  ) {
    return _ymap_insert(
      map,
      txn,
      key,
      value,
    );
  }

  late final _ymap_insertPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<YInput>)>>('ymap_insert');
  late final _ymap_insert = _ymap_insertPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<YInput>)>();

  /// Removes a `map` entry, given its `key`. Returns `1` if the corresponding entry was successfully
  /// removed or `0` if no entry with a provided `key` has been found inside of a `map`.
  ///
  /// A `key` must be a null-terminated UTF-8 encoded string.
  int ymap_remove(
    ffi.Pointer<Branch> map,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _ymap_remove(
      map,
      txn,
      key,
    );
  }

  late final _ymap_removePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>)>>('ymap_remove');
  late final _ymap_remove = _ymap_removePtr.asFunction<
      int Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
          ffi.Pointer<ffi.Char>)>();

  /// Returns a value stored under the provided `key`, or a null pointer if no entry with such `key`
  /// has been found in a current `map`. A returned value is allocated by this function and therefore
  /// should be eventually released using [youtput_destroy] function.
  ///
  /// A `key` must be a null-terminated UTF-8 encoded string.
  ffi.Pointer<YOutput> ymap_get(
    ffi.Pointer<Branch> map,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _ymap_get(
      map,
      txn,
      key,
    );
  }

  late final _ymap_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>>('ymap_get');
  late final _ymap_get = _ymap_getPtr.asFunction<
      ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>,
          ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>();

  /// Returns a value stored under the provided `key` as UTF-8 encoded, NULL-terminated JSON string.
  /// Once not needed that string should be deallocated using `ystring_destroy`.
  ///
  /// This method will return `NULL` pointer if value was not found or value couldn't be serialized
  /// into JSON string.
  ///
  /// This method will also try to serialize complex types that don't have native JSON representation
  /// like YMap, YArray, YText etc. in such cases their contents will be materialized into JSON values.
  ffi.Pointer<ffi.Char> ymap_get_json(
    ffi.Pointer<Branch> map,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _ymap_get_json(
      map,
      txn,
      key,
    );
  }

  late final _ymap_get_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>)>>('ymap_get_json');
  late final _ymap_get_json = _ymap_get_jsonPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>,
          ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>();

  /// Removes all entries from a current `map`.
  void ymap_remove_all(
    ffi.Pointer<Branch> map,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _ymap_remove_all(
      map,
      txn,
    );
  }

  late final _ymap_remove_allPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>)>>('ymap_remove_all');
  late final _ymap_remove_all = _ymap_remove_allPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Return a name (or an XML tag) of a current `YXmlElement`. Root-level XML nodes use "UNDEFINED" as
  /// their tag names.
  ///
  /// Returned value is a null-terminated UTF-8 string, which must be released using [ystring_destroy]
  /// function.
  ffi.Pointer<ffi.Char> yxmlelem_tag(
    ffi.Pointer<Branch> xml,
  ) {
    return _yxmlelem_tag(
      xml,
    );
  }

  late final _yxmlelem_tagPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>)>>('yxmlelem_tag');
  late final _yxmlelem_tag = _yxmlelem_tagPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>)>();

  /// Converts current `YXmlElement` together with its children and attributes into a flat string
  /// representation (no padding) eg. `<UNDEFINED><title key="value">sample text</title></UNDEFINED>`.
  ///
  /// Returned value is a null-terminated UTF-8 string, which must be released using [ystring_destroy]
  /// function.
  ffi.Pointer<ffi.Char> yxmlelem_string(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yxmlelem_string(
      xml,
      txn,
    );
  }

  late final _yxmlelem_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>)>>('yxmlelem_string');
  late final _yxmlelem_string = _yxmlelem_stringPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Inserts an XML attribute described using `attr_name` and `attr_value`. If another attribute with
  /// the same name already existed, its value will be replaced with a provided one.
  ///
  /// Both `attr_name` and `attr_value` must be a null-terminated UTF-8 encoded strings. Their
  /// contents are being copied, therefore it's up to a function caller to properly release them.
  void yxmlelem_insert_attr(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> attr_name,
    ffi.Pointer<ffi.Char> attr_value,
  ) {
    return _yxmlelem_insert_attr(
      xml,
      txn,
      attr_name,
      attr_value,
    );
  }

  late final _yxmlelem_insert_attrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('yxmlelem_insert_attr');
  late final _yxmlelem_insert_attr = _yxmlelem_insert_attrPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Removes an attribute from a current `YXmlElement`, given its name.
  ///
  /// An `attr_name`must be a null-terminated UTF-8 encoded string.
  void yxmlelem_remove_attr(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> attr_name,
  ) {
    return _yxmlelem_remove_attr(
      xml,
      txn,
      attr_name,
    );
  }

  late final _yxmlelem_remove_attrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>)>>('yxmlelem_remove_attr');
  late final _yxmlelem_remove_attr = _yxmlelem_remove_attrPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
          ffi.Pointer<ffi.Char>)>();

  /// Returns the value of a current `YXmlElement`, given its name, or a null pointer if not attribute
  /// with such name has been found. Returned pointer is a null-terminated UTF-8 encoded string, which
  /// should be released using [ystring_destroy] function.
  ///
  /// An `attr_name` must be a null-terminated UTF-8 encoded string.
  ffi.Pointer<ffi.Char> yxmlelem_get_attr(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> attr_name,
  ) {
    return _yxmlelem_get_attr(
      xml,
      txn,
      attr_name,
    );
  }

  late final _yxmlelem_get_attrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>)>>('yxmlelem_get_attr');
  late final _yxmlelem_get_attr = _yxmlelem_get_attrPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>,
          ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>();

  /// Returns an iterator over the `YXmlElement` attributes.
  ///
  /// Use [yxmlattr_iter_next] function in order to retrieve a consecutive (**unordered**) attributes.
  /// Use [yxmlattr_iter_destroy] function in order to close the iterator and release its resources.
  ffi.Pointer<YXmlAttrIter> yxmlelem_attr_iter(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yxmlelem_attr_iter(
      xml,
      txn,
    );
  }

  late final _yxmlelem_attr_iterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YXmlAttrIter> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>)>>('yxmlelem_attr_iter');
  late final _yxmlelem_attr_iter = _yxmlelem_attr_iterPtr.asFunction<
      ffi.Pointer<YXmlAttrIter> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Returns an iterator over the `YXmlText` attributes.
  ///
  /// Use [yxmlattr_iter_next] function in order to retrieve a consecutive (**unordered**) attributes.
  /// Use [yxmlattr_iter_destroy] function in order to close the iterator and release its resources.
  ffi.Pointer<YXmlAttrIter> yxmltext_attr_iter(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yxmltext_attr_iter(
      xml,
      txn,
    );
  }

  late final _yxmltext_attr_iterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YXmlAttrIter> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>)>>('yxmltext_attr_iter');
  late final _yxmltext_attr_iter = _yxmltext_attr_iterPtr.asFunction<
      ffi.Pointer<YXmlAttrIter> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Releases all of attributes iterator resources created by calling [yxmlelem_attr_iter]
  /// or [yxmltext_attr_iter].
  void yxmlattr_iter_destroy(
    ffi.Pointer<YXmlAttrIter> iterator,
  ) {
    return _yxmlattr_iter_destroy(
      iterator,
    );
  }

  late final _yxmlattr_iter_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YXmlAttrIter>)>>(
          'yxmlattr_iter_destroy');
  late final _yxmlattr_iter_destroy = _yxmlattr_iter_destroyPtr
      .asFunction<void Function(ffi.Pointer<YXmlAttrIter>)>();

  /// Returns a next XML attribute from an `iterator`. Attributes are returned in an unordered
  /// manner. Once `iterator` reaches the end of attributes collection, a null pointer will be
  /// returned.
  ///
  /// Returned value should be eventually released using [yxmlattr_destroy].
  ffi.Pointer<YXmlAttr> yxmlattr_iter_next(
    ffi.Pointer<YXmlAttrIter> iterator,
  ) {
    return _yxmlattr_iter_next(
      iterator,
    );
  }

  late final _yxmlattr_iter_nextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YXmlAttr> Function(
              ffi.Pointer<YXmlAttrIter>)>>('yxmlattr_iter_next');
  late final _yxmlattr_iter_next = _yxmlattr_iter_nextPtr
      .asFunction<ffi.Pointer<YXmlAttr> Function(ffi.Pointer<YXmlAttrIter>)>();
